fix/tramites (#95)